--- a/src/scss/parts/_toolbar.scss
+++ b/src/scss/parts/_toolbar.scss
@@ -6,7 +6,7 @@
 
 	background: #F4F2F2;
 	box-shadow: inset 0 -1px 0 #dbd8d3;
-	z-index: 2000;
+	z-index: 20;
 }
 
 .pm_buttons {
